[gd_scene load_steps=21 format=3 uid="uid://ba6pf7ajyadmn"]

[ext_resource type="Script" uid="uid://winlmn0ndna3" path="res://Scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://d37dmp26mfjr6" path="res://Assets/Sprites/Owen Art/Man.png" id="2_onrkg"]
[ext_resource type="Shader" uid="uid://cfql7dxyj88i4" path="res://Shaders/hit_effect.gdshader" id="2_vgqql"]
[ext_resource type="PackedScene" uid="uid://c73wr4xjul056" path="res://Scenes/PlayerScenes/attack_arc.tscn" id="3_6t5aa"]
[ext_resource type="PackedScene" uid="uid://bdoxkjk3diuj4" path="res://Scenes/GUI/pause_menu.tscn" id="5_fkybt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hqtel"]
radius = 4.000001
height = 15.600004

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fkybt"]
shader = ExtResource("2_vgqql")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_onrkg"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_hqtel"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36666667, 0.76666665),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 0, 1]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1jxqw"]
resource_name = "Sprint"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "Walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.4333, 0.6666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 3]
}

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "hurt"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqtel"]
_data = {
&"Fall": SubResource("Animation_onrkg"),
&"Idle": SubResource("Animation_hqtel"),
&"Jump": SubResource("Animation_2hs0m"),
&"RESET": SubResource("Animation_i3pqv"),
&"Sprint": SubResource("Animation_1jxqw"),
&"Walk": SubResource("Animation_sweqy"),
&"dash": SubResource("Animation_6t5aa"),
&"hurt": SubResource("Animation_vgqql")
}

[sub_resource type="Animation" id="Animation_x3wgy"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.19491732),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3smsa"]
_data = {
&"RESET": SubResource("Animation_x3wgy"),
&"hit_flash": SubResource("Animation_fkybt")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6t5aa"]
radius = 3.0
height = 13.6

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
collision_mask = 15
script = ExtResource("1_onrkg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.19999996)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("CapsuleShape2D_hqtel")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_fkybt")
position = Vector2(-0.2, 0)
texture = ExtResource("2_onrkg")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqtel")
}
autoplay = "Idle"

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3smsa")
}

[node name="Timers" type="Node" parent="."]

[node name="ParticleTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="Attack Timer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="Dash Timer" type="Timer" parent="Timers"]
wait_time = 0.7
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="Resume Timer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Feet" type="Marker2D" parent="."]
position = Vector2(0, 2.6666667)
scale = Vector2(0.33333334, 0.33333334)

[node name="AttackArc" parent="." instance=ExtResource("3_6t5aa")]
visible = false
position = Vector2(0, 0.19999997)
scale = Vector2(1e-05, 0.9999998)

[node name="Directions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Directions"]
position = Vector2(2, 0)

[node name="Marker2D2" type="Marker2D" parent="Directions"]
position = Vector2(0, -2)

[node name="Marker2D3" type="Marker2D" parent="Directions"]
position = Vector2(-2, 0)

[node name="Marker2D4" type="Marker2D" parent="Directions"]
position = Vector2(0, 2.75)

[node name="hurtBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, 0.19999999)
shape = SubResource("CapsuleShape2D_6t5aa")

[node name="Menu\'s" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="Menu\'s" instance=ExtResource("5_fkybt")]

[connection signal="timeout" from="Timers/ParticleTimer" to="." method="_on_particle_timer_timeout"]
[connection signal="timeout" from="Timers/Attack Timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/Dash Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Timers/InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="Timers/Resume Timer" to="." method="_on_resume_timer_timeout"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
